Fix an layout issue of tooltip

--- a/src/component/Message/index.scss
+++ b/src/component/Message/index.scss
@@ -18,7 +18,7 @@
     user-select: none;
   }
   .tree-input-start {
-    left: -7px;
+    left: -6px;
     display: inline-flex;
     justify-content: flex-start;
     align-items: center;
