--- a/src/index.scss
+++ b/src/index.scss
@@ -16,12 +16,12 @@
   }
   .tree-input-name, .tree-input-item-name {
     .tree-input-tooltip {
-      transform: scale(0.1) translateY(100%);
+      transform: scale(0.1) translateY(-100%);
       opacity: 0;
     }
     &:hover {
       .tree-input-tooltip {
-        transform: scale(1) translateY(0);
+        transform: scale(1) translateY(calc(-100% - 26px));
         opacity: 1;
       }
     }
